[package]
name = "sdr-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.79"
byteorder = "1.5.0"
colored = "2.1.0"
fern = "0.6.2"
flac-bound = {version ="0.3.0"}
futures-util = "0.3.30"
hound = "3.5.1"
humantime = "2.1.0"
log = "0.4.21"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.10"
toml = "0.8.10"
url = "2.5.0"
